# LTL_checker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bash/: check.sh  verbose.sh
docs/: IMPLEMENTATION.md
examples/example_0/: benchmark.txt
examples/example_1/: TS.txt  benchmark.txt  result.txt
examples/example_2/: benchmark.txt  result.txt
examples/example_5/: TS.txt  benchmark.txt
output/: example_0.txt  example_1.txt  example_2.txt  example_3.txt  example_4.txt  example_5.txt
src/: run.py
src/automata/: closure.py  gnba.py  nba.py  ndfs.py  product.py
src/cli/: benchmark.py
src/parser/: ast_nodes.py  lexer.py  parser.py
src/ts/: transition_system.py
tests/: test_gnba.py  test_nba.py  test_ndfs.py  test_parser.py  test_product.py  test_ts.py
